# campinho

./: README.md  docker-compose.yml  pyproject.toml
backend/: manage.py  pyproject.toml
backend/campinho/: settings.py  urls.py
backend/lineup_team/: apps.py  models.py
backend/lineup_team/commands/: data_load.py
backend/lineup_team/controllers/: club.py  player.py
backend/lineup_team/migrations/: 0001_initial.py  0002_player.py
backend/lineup_team/queries/: club.py  player.py
backend/lineup_team/services/: club.py  player.py
campinho/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/campinho_front/src/app/: page.tsx
frontend/campinho_front/src/components/: campo.css  campo.tsx  jogador.css  jogador.tsx
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: player.tsx  player_bench.tsx  soccer_pitch.css  soccer_pitch.tsx
frontend/src/services/: api.ts
lineup_team/: club_scrapping_data.py  competition_scrapping_data.py  models.py
lineup_team/commands/: data_load.py
lineup_team/controllers/: club.py  player.py  transfermarkt.py
lineup_team/queries/: club.py  player.py
lineup_team/scripts/: transfermarkt_scraping.py
