[tool.poetry]
name = "campinho"
version = "0.1.0"
description = ""
authors = ["felipeandersonr <felipeatrodrigues34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
django = "^5.1.2"
pandas = "^2.2.3"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
