[tool.poetry]
name = "campinho"
version = "0.1.0"
description = ""
authors = ["felipeandersonr <felipeatrodrigues34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
django = "^5.1.2"
pandas = "^2.2.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
loguru = "^0.7.2"
django-extensions = "^3.2.3"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
